--- a/src/styles/Weather.module.css
+++ b/src/styles/Weather.module.css
@@ -18,7 +18,7 @@
 		gap: 1rem;
 		justify-content: space-evenly;
 		align-items: center;
-		color: var(--secondary-color);
+		color: var(--contrast-color);
 		font-weight: bold;
 
 		.current-weather-icon {
@@ -37,7 +37,7 @@
 	}
 
 	.weather-description {
-		color: var(--secondary-color);
+		color: var(--contrast-color);
 		text-transform: capitalize;
 		letter-spacing: 2px;
 		font-size: 1.5rem;
@@ -55,7 +55,7 @@
 	.wind-value {
 		display: flex;
 		justify-content: space-evenly;
-		color: var(--secondary-color);
+		color: var(--contrast-color);
 		margin-top: 0.5rem;
 	}
 }
