--- a/src/styles/WeatherInfo.module.css
+++ b/src/styles/WeatherInfo.module.css
@@ -16,8 +16,9 @@
     .detail {
       height: 100%;
       width: 100%;
-      display: flex;
-      column-gap: 0.5rem;
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     }
   }
 
