--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -1,16 +1,21 @@
 .card-container {
 	width: 70vw;
+	height: 70vh;
 	background: var(--neutral-color);
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: flex;
-	flex-flow: column wrap;
+	flex-direction: column;
 	justify-content: center;
 	gap: 1rem;
 	padding: 2rem;
 	margin: 2rem;
-	color: var(--primary-color);
+	color: var(--text-color);
 	border-radius: 10px;
+
+	@media (width >=2000px) {
+		font-size: 4rem;
+	}
 }
